--- a/config/game.jsonc
+++ b/config/game.jsonc
@@ -30,6 +30,7 @@
       },
       "textures": {
         "road": "assets/textures/road5.jpg",
+        "darkerRoad":"assets/textures/road.jpg",
         "bird": "assets/textures/bird.jpg",
         "cat": "assets/textures/cat.jpg",
         "fish": "assets/textures/fish.jpg",
@@ -82,10 +83,11 @@
           "tint": [1, 1, 1, 1],
           //"emissive":"asplaht-emissive"
           "sampler": "default",
-          "albedo" :"road",
+          "albedo" :"darkerRoad",
           "roughness":"roughness",
-          "specular":"asplaht-specular",
+          "specular":"white",
           "ambient_occlusion":"black"
+          //"emissive": "black"
         },
         "pebbles": {
           "type": "lighted",
@@ -306,15 +308,15 @@
           },
           {
               "position": [0, 1, -1],
-              "rotation": [0, -1, -1],
+              "rotation": [0, 0, -1],
               "components": [
                   {
                       "type": "Light",
                       "lightType": "spot",
-                      "diffuse":[0, 0, 1],
-                      "specular":[0, 0, 1],
-                      "cone_angles":[40, 0],
-                      "attenuation":[0.1, 0, 0]
+                      "diffuse":[1, 1, 1],
+                      "specular":[1, 1, 1],
+                      "cone_angles":[50, 0],
+                      "attenuation":[0.1, 0.0225, 0.31]
                   }
               ]
           }
