--- a/config/game.jsonc
+++ b/config/game.jsonc
@@ -83,7 +83,7 @@
           "tint": [1, 1, 1, 1],
           //"emissive":"asplaht-emissive"
           "sampler": "default",
-          "albedo" :"darkerRoad",
+          "albedo" :"road",
           "roughness":"roughness",
           "specular":"white",
           "ambient_occlusion":"black"
