--- a/config/game.jsonc
+++ b/config/game.jsonc
@@ -1,7 +1,7 @@
 {
   "start-scene": "menu",
   "window": {
-    "title": "Ya rab",
+    "title": "Garfood",
     "size": {
       "width": 1280,
       "height": 720
