--- a/config/game.jsonc
+++ b/config/game.jsonc
@@ -4,9 +4,9 @@
     "title": "Garfood",
     "size": {
       "width": 1280,
-      "height": 600
+      "height": 720
     },
-    "fullscreen": true
+    "fullscreen": false
   },
   "scene": {
     "renderer": {
@@ -324,7 +324,7 @@
                       "diffuse": [0.5, 0.5, 0.5],
                       "specular": [1, 1, 1],
                       "cone_angles":[90, 50],
-                      "attenuation":[0.01, 0.005, 0.01]
+                      "attenuation":[0.01, 0.05, 0.01]
               }
             ]
           }
