--- a/config/end.jsonc
+++ b/config/end.jsonc
@@ -3,7 +3,7 @@
     "window": {
         "title": "heeeeeeeh",
         "size": {
-            "width": 1224,
+            "width": 1280,
             "height": 720
         },
         "fullscreen": false
@@ -73,7 +73,7 @@
                 "children": [
                     {
                         "position": [0.0, -0.5, -1.5],
-                        "scale": [3, 2, 2],
+                        // "scale": [3, 2, 2],
                         "components": [
                             {
                                 "type": "Mesh Renderer",
